--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -39,9 +39,9 @@
     }
    ],
    "source": [
-    "Principal = 1000\n",
-    "Rate = 5\n",
-    "Time = 10\n",
+    "Principal = float(input("Enter the Principal amount : "))\n",
+    "Rate = float(input("Enter the Rate of Interest : "))\n",
+    "Time = float(input("Enter the Time Period : "))\n",
     "\n",
     "Simple_interest = (Principal*Rate*Time)/100\n",
     "print(\"The Simple Interest is\",Simple_interest)"
